Changed error-handling logic.